// Copyright 2019-present Open Networking Foundation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package atomix.server.service.set;

import "atomix/service/descriptor.proto";

option java_package = "io.atomix.server.service.set";
option java_outer_classname = "SetProto";
option java_multiple_files = true;

// Distributed set snapshot
message DistributedSetSnapshot {
    repeated string values = 1;
    repeated string locked_elements = 2;
    map<string, DistributedSetTransaction> transactions = 3;
}

// Distributed set transaction
message DistributedSetTransaction {
    int64 version = 1;
    repeated DistributedSetUpdate updates = 2;
}

// Transaction update
message DistributedSetUpdate {
    Type type = 1;
    string value = 2;

    enum Type {
        ADD = 0;
        REMOVE = 1;
        CONTAINS = 2;
        NOT_CONTAINS = 3;
    }
}

message SizeRequest {
}

message SizeResponse {
    int32 size = 1;
}

message ContainsRequest {
    repeated string values = 1;
}

message ContainsResponse {
    bool contains = 1;
}

message AddRequest {
    repeated string values = 1;
}

message AddResponse {
    UpdateStatus status = 1;
    bool added = 2;
}

message RemoveRequest {
    repeated string values = 1;
}

message RemoveResponse {
    UpdateStatus status = 1;
    bool removed = 2;
}

message ClearRequest {
}

message ClearResponse {
}

message ListenRequest {

}

message ListenResponse {
    Type type = 1;
    string value = 2;

    enum Type {
        ADDED = 0;
        REMOVED = 1;
    }
}

message UnlistenRequest {
    int64 stream_id = 1;
}

message UnlistenResponse {
}

message IterateRequest {
}

message IterateResponse {
    string value = 1;
}

enum UpdateStatus {
    OK = 0;
    NOOP = 1;
    WRITE_LOCK = 2;
}

message PrepareRequest {
    string transaction_id = 1;
    DistributedSetTransaction transaction = 2;
}

message PrepareResponse {
    Status status = 1;

    enum Status {
        OK = 0;
        PARTIAL_FAILURE = 1;
        CONCURRENT_TRANSACTION = 2;
        OPTIMISTIC_LOCK_FAILURE = 3;
    }
}

message CommitRequest {
    string transaction_id = 1;
}

message CommitResponse {
    Status status = 1;

    enum Status {
        OK = 0;
        UNKNOWN_TRANSACTION_ID = 1;
        FAILURE_TO_PREPARE = 2;
        FAILURE_DURING_COMMIT = 3;
    }
}

message RollbackRequest {
    string transaction_id = 1;
}

message RollbackResponse {
    Status status = 1;

    enum Status {
        OK = 0;
        UNKNOWN_TRANSACTION_ID = 1;
    }
}

// Set service
service SetService {
    rpc Size(SizeRequest) returns (SizeResponse) {
        option (atomix.service.operation) = {
            name: "size"
            type: QUERY
        };
    }
    rpc Contains(ContainsRequest) returns (ContainsResponse) {
        option (atomix.service.operation) = {
            name: "contains"
            type: QUERY
        };
    }
    rpc Add(AddRequest) returns (AddResponse) {
        option (atomix.service.operation) = {
            name: "add"
            type: COMMAND
        };
    }
    rpc Remove(RemoveRequest) returns (RemoveResponse) {
        option (atomix.service.operation) = {
            name: "remove"
            type: COMMAND
        };
    }
    rpc Clear(ClearRequest) returns (ClearResponse) {
        option (atomix.service.operation) = {
            name: "clear"
            type: COMMAND
        };
    }
    rpc Listen(ListenRequest) returns (stream ListenResponse) {
        option (atomix.service.operation) = {
            name: "listen"
            type: COMMAND
        };
    }
    rpc Unlisten(UnlistenRequest) returns (UnlistenResponse) {
        option (atomix.service.operation) = {
            name: "unlisten"
            type: COMMAND
        };
    }
    rpc Iterate(IterateRequest) returns (stream IterateResponse) {
        option (atomix.service.operation) = {
            name: "iterate"
            type: QUERY
        };
    }
    rpc Prepare(PrepareRequest) returns (PrepareResponse) {
        option (atomix.service.operation) = {
            name: "prepare"
            type: COMMAND
        };
    }
    rpc PrepareAndCommit(PrepareRequest) returns (PrepareResponse) {
        option (atomix.service.operation) = {
            name: "prepareAndCommit"
            type: COMMAND
        };
    }
    rpc Commit(CommitRequest) returns (CommitResponse) {
        option (atomix.service.operation) = {
            name: "commit"
            type: COMMAND
        };
    }
    rpc Rollback(RollbackRequest) returns (RollbackResponse) {
        option (atomix.service.operation) = {
            name: "rollback"
            type: COMMAND
        };
    }
}
